--- a/bank-ocr/pom.xml
+++ b/bank-ocr/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.testdouble</groupId>
 		<artifactId>test-training</artifactId>
-		<version>0.0.3</version>
+		<version>0.0.3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>bank-ocr</artifactId>
@@ -41,4 +41,8 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+        <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+</properties>
 </project>
