--- a/example/pom.xml
+++ b/example/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.testdouble</groupId>
 		<artifactId>test-training</artifactId>
-		<version>0.0.3</version>
+		<version>0.0.3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>example</artifactId>
@@ -17,6 +17,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                    <maven.compiler.source>1.6</maven.compiler.source>
+                    <maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
 
 	<dependencies>
